--- a/styles/sass/helpers/_variables.scss
+++ b/styles/sass/helpers/_variables.scss
@@ -47,8 +47,8 @@ $light: #8188a9;
 $black: #000;
 $cyan: #848892;
 
-$theme-primary-color: #ef5f34;
-$theme-primary-color-s2: #5dc4b8;
+$theme-primary-color: #06800e;
+$theme-primary-color-s2: #d5e218;
 $body-bg-color: #fff;
 $section-bg-color: #fef6f3;
 $section-bg-color2: #e9fafa;
