--- a/styles/sass/page/_home-default.scss
+++ b/styles/sass/page/_home-default.scss
@@ -862,6 +862,8 @@
          }
      
          .volunteer-img{
+            width: 365px;
+            height: 512px;
              position: absolute;
              right: 80px;
              bottom: 0;
